changed url and key

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         let tabCount = 1;
         let currentTip = 0;
 
-        let API_URL = 'https://legend.lnbits.com/api/v1'; // Replace with your LNBits instance URL if different
-        let API_KEY = 'your-api-key-here'; // Replace with your actual LNBits API key
+        let API_URL = 'https://demo.lnbits.com/api/v1'; // Replace with your LNBits instance URL if different
+        let API_KEY = 'af244e6032ae47b6872973721a0be66c'; // Replace with your LNBits API key
 
         date = new Date().toLocaleDateString();
         const loadingDiv = document.getElementById('loading');
