--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🗲Split🗲Tab🗲</title>
+    <title>..::split.r00t.co::..</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; max-width: 1200px; margin: 0 auto; padding: 6px; background-color: #4d4d4d; color: #fff; }
@@ -13,8 +13,8 @@
         .item { background-color: #555; margin: 5px 0; padding: 10px; border-radius: 3px; cursor: move; display: flex; justify-content: space-between; align-items: center; transition: background-color 0.3s; }
         .item:hover { background-color: #666; }
         .tip-buttons, .controls { margin-top: 5px; }
-        button { margin-right: 10px; margin-top: 4px; padding: 8px 15px; background-color: #f7931a; color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s; text-shadow: 1px 1px 2px #000000; }
-        button:hover { background-color: #e88a18; }
+        button { margin-right: 10px; margin-top: 4px; padding: 8px 15px; background-color: #f7931a; text-shadow: 2px 2px 4px #000000; color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s; }
+        button:hover { background-color: #a36110; }
         button:disabled { background-color: #cccccc; cursor: not-allowed; }
         input { margin-bottom: 10px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; background-color: #555; color: #fff; }
         .total, .total-with-tip { font-weight: bold; margin-top: 10px; }
@@ -53,7 +53,7 @@
         <svg class="bitcoin-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#f7931a">
             <path d="M23.638 14.904c-1.602 6.43-8.113 10.34-14.542 8.736C2.67 22.05-1.244 15.525.362 9.105 1.962 2.67 8.475-1.243 14.9.358c6.43 1.605 10.342 8.115 8.738 14.548v-.002zm-6.35-4.613c.24-1.59-.974-2.45-2.64-3.03l.54-2.153-1.315-.33-.525 2.107c-.345-.087-.705-.167-1.064-.25l.526-2.127-1.32-.33-.54 2.165c-.285-.067-.565-.132-.84-.2l-1.815-.45-.35 1.407s.975.225.955.236c.535.136.63.486.615.766l-1.477 5.92c-.075.166-.24.406-.614.314.015.02-.96-.24-.96-.24l-.66 1.51 1.71.426.93.242-.54 2.19 1.32.327.54-2.17c.36.1.705.19 1.05.273l-.51 2.154 1.32.33.545-2.19c2.24.427 3.93.257 4.64-1.774.57-1.637-.03-2.58-1.217-3.196.854-.193 1.5-.76 1.68-1.93h.01zm-3.01 4.22c-.404 1.64-3.157.75-4.05.53l.72-2.9c.896.23 3.757.67 3.33 2.37zm.41-4.24c-.37 1.49-2.662.735-3.405.55l.654-2.64c.744.18 3.137.524 2.75 2.084v.006z"/>
         </svg>
-        <h1>🗲Split🗲Tab🗲</h1>
+        <h1>🗲</h1> <button onclick="splitTab()">...:://Split:.:Tab\\::...</button>
     </div>
     <div class="settings-icon" onclick="openSettingsModal()">⚙️</div>
 
@@ -105,15 +105,14 @@
             <button onclick="applyCustomTip()">Apply Custom Tip</button>
 			<div class="rounding-buttons">
                 <button onclick="roundTotal('up')">Round Up</button>
-                <button onclick="roundTotal('down')">Round Down</button><span>(diff applied to Tab 1)</span>
+                <button onclick="roundTotal('down')">Round Down</button><span>(Applied to Tab 1)</span>
             </div>
         </div>
-        <button onclick="splitTab()">....::://Split:::Tab\\:::....</button>
     </div>
         <div id="grandTotal">Grand Total (All Tabs): $<span id="grandTotalAmount">0.00</span></div>
     </div>
     <footer>
-         <p>p0.2.3<br>
+         <p>p0.3<br>
     </footer>
     <script>
         let tabCount = 1;
@@ -369,7 +368,7 @@
             API_KEY = document.getElementById('apiKey').value;
             closeSettingsModal();
             console.log('Settings saved:', { API_URL, API_KEY });
-            // Here you would typically save these values to localStorage or send them to a server
+            // save these values to localStorage or send them to a server
         }
 
         // When the user clicks anywhere outside of the modal, close it
