--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         #customTipInput { width: 50px; margin-right: 5px; }
         .header { display: flex; align-items: center; gap: 10px; }
         .bitcoin-logo { width: 40px; height: 40px; }
+        .bitcoin-logo:hover {fill: #a36110; }
         #grandTotal { font-size: 1.2em; font-weight: bold; margin-top: 10px; text-align: center; text-shadow: 2px 2px 4px #000000; }
         .qrcode { text-align: center; margin-top: 2px; overflow: scroll; background-color: white !important; background-size: 363px 363px; }
-        .qr-container { text-align: center; margin-top: 2px; overflow: scroll; background-color: white !important; background-size: 363px 363px; }
+        .qr-container { text-align: center; margin-top: 2px; overflow: auto; background-color: white !important; background-size: 363px 363px; }
         .tx-info-container { text-align: left; margin-top: 2px; overflow: hidden; background-color: #333; }
         #loading { display: grid; text-align: center; margin-bottom: 10rem; margin-top: 28rem; }
         .spinner { display; flex-basis; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; width: 30px; height: 30px; animation: spin 1s linear infinite; margin: 0 auto; }
@@ -46,16 +47,41 @@
         .settings-form input { padding: 5px; font-size: 16px; }
         .settings-form button { padding: 10px; background-color: #f7931a; color: white; border: none; cursor: pointer; font-size: 16px; }
         .settings-form button:hover { background-color: #e88a18; }
+        .diss { color: #aaa; float: right; font-size: 28px;  font-weight: bold;  cursor: pointer; }
+        .diss:hover, .close:focus { color: black; text-decoration: none; cursor: pointer; }
+        .info-form { display: flex; flex-direction: column; gap: 10px; }
+        .info-form button { padding: 10px; background-color: #f7931a; color: white; border: none; cursor: pointer; font-size: 16px; }
+        .info-form button:hover { background-color: #e88a18; }
     </style>
 </head>
+<body onload="openInfoModal()"> 
 <body>
     <div class="header">
-        <svg class="bitcoin-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#f7931a">
+        <svg class="bitcoin-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#f7931a" onclick="openSettingsModal()">
             <path d="M23.638 14.904c-1.602 6.43-8.113 10.34-14.542 8.736C2.67 22.05-1.244 15.525.362 9.105 1.962 2.67 8.475-1.243 14.9.358c6.43 1.605 10.342 8.115 8.738 14.548v-.002zm-6.35-4.613c.24-1.59-.974-2.45-2.64-3.03l.54-2.153-1.315-.33-.525 2.107c-.345-.087-.705-.167-1.064-.25l.526-2.127-1.32-.33-.54 2.165c-.285-.067-.565-.132-.84-.2l-1.815-.45-.35 1.407s.975.225.955.236c.535.136.63.486.615.766l-1.477 5.92c-.075.166-.24.406-.614.314.015.02-.96-.24-.96-.24l-.66 1.51 1.71.426.93.242-.54 2.19 1.32.327.54-2.17c.36.1.705.19 1.05.273l-.51 2.154 1.32.33.545-2.19c2.24.427 3.93.257 4.64-1.774.57-1.637-.03-2.58-1.217-3.196.854-.193 1.5-.76 1.68-1.93h.01zm-3.01 4.22c-.404 1.64-3.157.75-4.05.53l.72-2.9c.896.23 3.757.67 3.33 2.37zm.41-4.24c-.37 1.49-2.662.735-3.405.55l.654-2.64c.744.18 3.137.524 2.75 2.084v.006z"/>
         </svg>
-        <h1>🗲</h1> <button onclick="splitTab()">...:://Split:.:Tab\\::...</button>
+        <h1>-</h1> <button onclick="splitTab()">...:://Split:.:Tab\\::...</button>
     </div>
-    <div class="settings-icon" onclick="openSettingsModal()">⚙️</div>
+
+    <div id="infoModal" class="modal">
+        <div class="modal-content">
+            <span class="diss" onclick="dissInfo()">&times;</span>
+            <h2>Welcome!</h2>
+            <form class="info-form" onsubmit="dissInfo()">
+                <p>-Split with button at the top<br>
+                    -Add items to each tab<br>
+                    -Calulate (global) tip<br>
+                    -Round grand gotal <small>(Only changes Tab 1)</small><br>
+                    -Generate invoices for each tab<br>
+                    <b>Profit!</b></p>
+                <p>The default settings point to a demo LNBits instance/wallet.<br>
+                    Tips Accepted 😁 </p>
+                <p>You can click the bitcoin logo to change URL/KEY.<br>
+                    Information added stays client side and isn't sent to the server.</p>
+                <button type="submit">Dismiss</button>
+            </form>
+        </div>
+    </div> 
 
     <div id="settingsModal" class="modal">
         <div class="modal-content">
@@ -112,7 +138,7 @@
         <div id="grandTotal">Grand Total (All Tabs): $<span id="grandTotalAmount">0.00</span></div>
     </div>
     <footer>
-         <p>p0.3<br>
+         <p>p0.4<br>
     </footer>
     <script>
         let tabCount = 1;
@@ -368,13 +394,27 @@
             API_KEY = document.getElementById('apiKey').value;
             closeSettingsModal();
             console.log('Settings saved:', { API_URL, API_KEY });
-            // save these values to localStorage or send them to a server
         }
-
-        // When the user clicks anywhere outside of the modal, close it
         window.onclick = function(event) {
             if (event.target == document.getElementById('settingsModal')) {
                 closeSettingsModal();
+            }
+        }
+        function openInfoModal() {
+            document.getElementById('infoModal').style.display = 'block';
+        }
+
+        function closeInfoModal() {
+            document.getElementById('infoModal').style.display = 'none';
+        }
+
+        function dissInfo(diss) {
+            event.preventDefault();
+            closeInfoModal();
+        }
+        window.onclick = function(diss) {
+            if (diss.target == document.getElementById('infoModal')) {
+                closeInfoModal();
             }
         }
         async function createPayment(tabId) {
