delete images in base dir, update index.html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <!-- For all browsers -->
-    <link rel="icon" type="image/png" sizes="32x32" href="logo_32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="logo_16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/logo_16x16.png">
     <!-- For Google and Android -->
-    <link rel="icon" type="image/png" sizes="48x48" href="logo_48x48.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="logo_192x192.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/img/logo_48x48.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/logo_192x192.png">
     <!-- For iPad -->
-    <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="logo_167x167.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="/img/logo_167x167.png">
     <!-- For iPhone -->
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="logo_180x180.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/img/logo_180x180.png">
 </head>
 <body onload="openInfoModal()"> 
 <body>
@@ -107,8 +107,8 @@
         <div id="grandTotal">Grand Total: $<span id="grandTotalAmount">0.00</div>
     </div>
     <footer>
-         <a href="https://github.com/BrashRatel/BrashRatel.github.io">p0.5.5</a>
+         <a href="https://github.com/BrashRatel/BrashRatel.github.io">p0.5.6</a>
     </footer>
-    <script src="p_tab_split_0.1.js"></script>
+    <script src="tab_split_0.2.js"></script>
 </body>
 </html>
