change to default instance, update README

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div id="grandTotal">Grand Total: $<span id="grandTotalAmount">0.00</div>
     </div>
     <footer>
-         <a href="https://github.com/BrashRatel/BrashRatel.github.io">p0.5.6</a>
+         <a href="https://github.com/BrashRatel/BrashRatel.github.io">0.6</a>
     </footer>
-    <script src="tab_split_0.2.js"></script>
+    <script src="tab_split_0.3.js"></script>
 </body>
 </html>
